--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
-<!doctype HTML>
+<!doctype html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<header>
-		<div class="img-left">
-			<img id="header-logo" src="res/logo.png" alt="sun-logo">
-		</div>
-		<div id="header-menu">
-			<div class="menu-item">Home</div>
-			<div class="menu-item">About</div>
-		</div>
-	</header>
-	<section>
-		<aside>
-		</aside>
-		<aside>
-		</aside>
-	</section>
-	<footer id="back">
-	</footer>
-	<footer>
-	</footer>
-</body>
+	<head>
+		<meta charset='utf-8'>
+		<title>Thank You!</title>
+	</head>
+	<body>
+		<h1>Thanks FIRST_NAME!</h1>
+		<p>Thanks for coming to our conference. We couldn't have done it without you!</p>
+		<p>
+			Political activism is at the heart of any democracy and your voice needs to be heard.
+			Please consider reaching out to your following representatives:
+		</p>
+		
+		<table>
+			<tr><th>Legislators</th></tr>
+			<tr><td>LEGISLATORS</td></tr>
+		</table>
+	</body>
 </html>
